# Desert-Semantic-Segmentation

./: .flake8  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg  test.py  train.py
.github/workflows/: ci.yml
api/: app.py
apps/: streamlit_app.py
scripts/: export_onnx.py
src/desert_segmentation/: test.py  train.py
src/desert_segmentation/datasets/: desert_dataset.py
src/desert_segmentation/losses/: segmentation_loss.py
src/desert_segmentation/utils/: tta.py
src/losses/: segmentation_loss.py
src/models/: unet.py
src/utils/: metrics.py
tests/: test_metrics.py  test_model.py
