[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "desert-semantic-segmentation"
version = "0.1.0"
description = "Terrain-aware semantic segmentation for desert environments"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
